// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema-parse snapshots > ChangeOrderSchema.parse() of change-orders.data[0] matches snapshot 1`] = `
{
  "DT_RowId": "row_500001",
  "approved_number": null,
  "attachment": 0,
  "comments_status": 1,
  "created_at": "02/04/2026",
  "dates": "-",
  "email_status": 1601,
  "email_status_label": "",
  "info": 500001,
  "name": "Jones - Basement Work",
  "number": 19,
  "project_name": "Jones Addition",
  "relations": "<span title="10001 - Gross Margin
1515 - Demolition Labor
3010 - Framing Labor">10001 - Gross Margin, 1515 - Demolition Labor, 3010 - Framing Labor</span>",
  "status": 1,
  "total": "$ 13,800.00",
}
`;

exports[`schema-parse snapshots > CustomerSchema.parse() of customers.data[0] matches snapshot 1`] = `
{
  "DT_RowId": "row_300001",
  "address": "100 Industrial Way",
  "budget_relations": "<div class="text-truncate" title=""></div>",
  "city": "Anytown",
  "country": "United States",
  "created_at": "01/19/2026",
  "email": "vendor@example.com",
  "main_contact": "Pat Sample",
  "name": "Acme Subcontractors LLC",
  "phone": "555-010-0001",
  "rating": 4,
  "state": "VA",
  "status": "Active",
  "sync_status": "<span class="material-icons text-grey" title="The item does not meet the synchronization criteria">sync_disabled</span>",
  "type_name": "Subcontractor",
  "zip": "22030",
}
`;

exports[`schema-parse snapshots > DatatableResponseSchema(ProjectSchema) round-trip of projects-list matches snapshot 1`] = `
{
  "data": [
    {
      "DT_RowId": "row_100001",
      "address": "123 Main St",
      "budget_revised": "$ 65,000.00",
      "change_orders_approved": "-",
      "change_orders_pending": "-",
      "city": "Anytown",
      "fees_income_per_month": "-",
      "fees_percent": "-",
      "fees_profit_percent": "-",
      "fees_profit_total": "-",
      "fees_total": "-",
      "financial_statements_fees_profit_unpaid": "-",
      "financial_statements_fees_remaining": "-",
      "financial_statements_payment_last": "02/04/2026",
      "financial_statements_to_pay_aging": "-",
      "financial_statements_to_pay_last": "-",
      "financial_statements_unpaid": "-",
      "id": 100001,
      "income_per_month": "-",
      "invoices_paid": "-",
      "managers": "<div class="text-truncate initOverTooltip" style="width:auto;max-width:190px;" data-container="body" title="Project Manager A, Project Manager B">Project Manager A, Project Manager B</div>",
      "name": "Smith Renovation 1 Interior Remodel",
      "price_per_fq_ft": "-",
      "purchase_orders_total": "-",
      "schedule_baseline_end_date": "-",
      "schedule_baseline_variance": "-",
      "schedule_published_duration": "-",
      "schedule_published_end_date": "-",
      "schedule_published_progress": "-",
      "schedule_published_remaining": "-",
      "schedule_published_start_date": "-",
      "schedule_today_tasks": "-",
      "status": 6,
    },
    {
      "DT_RowId": "row_100002",
      "address": "456 Elm Ave",
      "budget_revised": "$ 245,500.50",
      "change_orders_approved": "$ 12,500.00",
      "change_orders_pending": "$ 3,200.00",
      "city": "Springfield",
      "fees_income_per_month": "$ 8,183.33",
      "fees_percent": "10%",
      "fees_profit_percent": "15%",
      "fees_profit_total": "$ 36,825.07",
      "fees_total": "$ 24,550.05",
      "financial_statements_fees_profit_unpaid": "$ 18,412.53",
      "financial_statements_fees_remaining": "$ 12,275.02",
      "financial_statements_payment_last": "04/30/2026",
      "financial_statements_to_pay_aging": "12 days",
      "financial_statements_to_pay_last": "$ 45,000.00",
      "financial_statements_unpaid": "$ 122,750.25",
      "id": 100002,
      "income_per_month": "$ 40,916.67",
      "invoices_paid": "$ 122,750.25",
      "managers": "<div class="text-truncate" title="Project Manager A">Project Manager A</div>",
      "name": "Jones Addition",
      "price_per_fq_ft": "$ 425.00",
      "purchase_orders_total": "$ 95,000.00",
      "schedule_baseline_end_date": "05/01/2026",
      "schedule_baseline_variance": "+14 days",
      "schedule_published_duration": "120 days",
      "schedule_published_end_date": "05/15/2026",
      "schedule_published_progress": "45%",
      "schedule_published_remaining": "66 days",
      "schedule_published_start_date": "01/15/2026",
      "schedule_today_tasks": "2",
      "status": 1,
    },
    {
      "DT_RowId": "row_100003",
      "address": "789 Oak Blvd",
      "budget_revised": "$ 175,000.00",
      "change_orders_approved": "$ 7,500.00",
      "change_orders_pending": "-",
      "city": "Riverdale",
      "fees_income_per_month": "$ 2,000.00",
      "fees_percent": "8%",
      "fees_profit_percent": "12%",
      "fees_profit_total": "$ 21,000.00",
      "fees_total": "$ 14,000.00",
      "financial_statements_fees_profit_unpaid": "-",
      "financial_statements_fees_remaining": "-",
      "financial_statements_payment_last": "12/15/2025",
      "financial_statements_to_pay_aging": "-",
      "financial_statements_to_pay_last": "-",
      "financial_statements_unpaid": "-",
      "id": 100003,
      "income_per_month": "$ 25,000.00",
      "invoices_paid": "$ 175,000.00",
      "managers": "<div class="text-truncate" title="Project Manager C">Project Manager C</div>",
      "name": "Brown Addition",
      "price_per_fq_ft": "$ 350.00",
      "purchase_orders_total": "$ 88,000.00",
      "schedule_baseline_end_date": "12/01/2025",
      "schedule_baseline_variance": "+14 days",
      "schedule_published_duration": "-",
      "schedule_published_end_date": "12/15/2025",
      "schedule_published_progress": "100%",
      "schedule_published_remaining": "0",
      "schedule_published_start_date": "06/01/2025",
      "schedule_today_tasks": "-",
      "status": 5,
    },
  ],
  "draw": 1,
  "recordsFiltered": 3,
  "recordsTotal": 3,
}
`;

exports[`schema-parse snapshots > FinancialStatementSchema.parse() of financial-statement matches snapshot 1`] = `
{
  "aging_days": 0,
  "amount_paid": "$ 45,000.00",
  "amount_unpaid": "$ 0.00",
  "assigned_to": [
    9001,
  ],
  "created_at": "04/01/2026",
  "credit_amount": "0",
  "current_amount": "$ 45,000.00",
  "current_amount_value": 45000,
  "due_date": "04/30/2026",
  "financial_method": 3,
  "id": 700001,
  "items": [
    {
      "category": "3010 - Framing Labor",
      "id": 700101,
      "name": "Framing labor",
      "total": "$ 18,000.00",
    },
    {
      "category": "3620 - Drywall",
      "id": 700102,
      "name": "Drywall materials",
      "total": "$ 27,000.00",
    },
  ],
  "name": "Q1 2026 Statement",
  "notes": "Progress billing for Q1 2026 phase 1.",
  "payment_last": "04/30/2026",
  "project_id": 100002,
  "report_previous_balance": "0",
  "status": 1,
}
`;

exports[`schema-parse snapshots > ProjectSchema.parse() of projects-list.data[0] matches snapshot 1`] = `
{
  "DT_RowId": "row_100001",
  "address": "123 Main St",
  "budget_revised": "$ 65,000.00",
  "change_orders_approved": "-",
  "change_orders_pending": "-",
  "city": "Anytown",
  "fees_income_per_month": "-",
  "fees_percent": "-",
  "fees_profit_percent": "-",
  "fees_profit_total": "-",
  "fees_total": "-",
  "financial_statements_fees_profit_unpaid": "-",
  "financial_statements_fees_remaining": "-",
  "financial_statements_payment_last": "02/04/2026",
  "financial_statements_to_pay_aging": "-",
  "financial_statements_to_pay_last": "-",
  "financial_statements_unpaid": "-",
  "id": 100001,
  "income_per_month": "-",
  "invoices_paid": "-",
  "managers": "<div class="text-truncate initOverTooltip" style="width:auto;max-width:190px;" data-container="body" title="Project Manager A, Project Manager B">Project Manager A, Project Manager B</div>",
  "name": "Smith Renovation 1 Interior Remodel",
  "price_per_fq_ft": "-",
  "purchase_orders_total": "-",
  "schedule_baseline_end_date": "-",
  "schedule_baseline_variance": "-",
  "schedule_published_duration": "-",
  "schedule_published_end_date": "-",
  "schedule_published_progress": "-",
  "schedule_published_remaining": "-",
  "schedule_published_start_date": "-",
  "schedule_today_tasks": "-",
  "status": 6,
}
`;
